<resources>
    <string name="text_input_layout_width">383dp</string>
    <string name="text_input_layout_height">48dp</string>
    <string name="text_input_layout_marginTop">12dp</string>
    <string name="app_name">JobsCompare</string>
    <string name="visio">visio</string>
    <string name="company">Amazon</string>
    <string name="jobTitle">Data Engineer</string>
    <string name="adress">22–30 av. de Wagram\n75000, Paris</string>
    <string name="joblink">lien de l’offre</string>
    <string name="prochain_v_nement">Prochain événement</string>
    <string name="date_prochain_evenement">22 avril</string>
    <string name="nbre_rtt">8</string>
    <string name="titre_prochain_eve">Entretien #2</string>
    <string name="heure_eve_pro">14h30</string>
    <string name="conditions_de_l_offre">Conditions de l’offre</string>
    <string name="tel">tel</string>
    <string name="linkedin_image">linkedin</string>
    <string name="mutuelle">Mutuelle : </string>
    <string name="description_offre">Ce texte décris l’offre \n j’écris un texte super long exprès en espérant qu’il aille sur plusieurs lignes</string>
    <string name="travaillent_ici">travaillent ici</string>
    <string name="camera_image">camera</string>
    <string name="nbre_relations_linkedin">7</string>
    <string name="date_chrono2">15 avril</string>
    <string name="emplacement_image">emplacement</string>
    <string name="ce">CE : </string>
    <string name="rtt">RTT : </string>
    <string name="heures">Heures : </string>
    <string name="nbre_heures">39.5</string>
    <string name="par_semaine"> par semaine</string>
    <string name="date_chrono1">02 avril</string>
    <string name="ce_boolean">oui</string>
    <string name="mutuelle_boolean">oui</string>
    <string name="jours_par_an"> jours par an</string>
    <string name="salaire">Salaire : </string>
    <string name="salaire_value">45</string>
    <string name="k_an">k€/an</string>
    <string name="titre_descriptif_offre">Descriptif offre</string>
    <string name="chronologie">Chronologie</string>
    <string name="titre_chrono1">Candidature</string>
    <string name="mail">mail</string>
    <string name="titre_chrono2">Entretien #1</string>
    <string name="de_vos_relations"> de vos relations</string>
    <string name="link_offer">link</string>
    <string name="tel_image">tel</string>
    <string name="mail_image">mail</string>
    <string name="ajouter_une_nouvelle_offre">Informations</string>
    <string name="entreprise">Entreprise</string>
    <string name="entreprise_hint">ex : EDF</string>
    <string name="poste">Poste</string>
    <string name="poste_hint">ex : Data Engineer</string>
    <string name="lienVersLOffre">Lien vers l offre</string>
    <string name="lien_hint">ex : http://pole-emploi.fr/offres/180640</string>
    <string name="typeCandidature">Type de candidature</string>
    <string name="candidature_spontanee">Candidature spontanee</string>
    <string name="offre_d_emploi">offre d emploi</string>
    <string name="approche_reseau">approche reseau</string>
    <string name="autre">autre</string>
    <string name="valider">Valider</string>
    <string name="address_hint">ex : 22–30 av. de Wagram</string>
    <string name="logo_company">logo_company</string>
    <string name="typeoffre">typeOffre</string>
    <string name="adresse_de_l_entreprise">Adresse de l\'entreprise</string>
</resources>